fix(item-sliding): fix the styles for option visibility and rename classes

--- a/packages/core/src/components/item-option/item-option.scss
+++ b/packages/core/src/components/item-option/item-option.scss
@@ -16,10 +16,8 @@
   font-size: 1em;
 }
 
-ion-item-options:not([icon-start]) ion-item-option:not([icon-only]) {
-  .item-option-button-inner {
-    flex-direction: column;
-  }
+ion-item-options .item-option-button-inner {
+  flex-direction: column;
 }
 
 .item-option-button-inner {
@@ -45,7 +43,7 @@ ion-item-options:not([icon-start]) ion-item-option:not([icon-only]) {
 // Item Expandable Animation
 // --------------------------------------------------
 
-ion-item-option[expandable] {
+.item-option-expandable {
   flex-shrink: 0;
 
   transition-duration: 0;
@@ -53,7 +51,7 @@ ion-item-option[expandable] {
   transition-timing-function: cubic-bezier(.65, .05, .36, 1);
 }
 
-ion-item-sliding.active-swipe-right ion-item-option[expandable] {
+.item-sliding-active-swipe-right .item-options-right .item-option-expandable {
   transition-duration: .6s;
   transition-property: padding-left;
 
@@ -71,7 +69,7 @@ ion-item-sliding.active-swipe-right ion-item-option[expandable] {
   }
 }
 
-ion-item-sliding.active-swipe-left ion-item-option[expandable] {
+.item-sliding-active-swipe-left .item-options-left .item-option-expandable {
   transition-duration: .6s;
   transition-property: padding-right;
 
